@@ -167,7 +167,7 @@ namespace Server.Network
 
 		private static Hashtable m_GameServers = new Hashtable();
 
-		public static NetState GameServerClient(GameServerConfig config) {
+		public static NetState GameServerClient(Configuration.GameServer config) {
 			if (config == null)
 				return null;
 
@@ -210,7 +210,7 @@ namespace Server.Network
 			try{ m_Address = ((IPEndPoint)m_Socket.RemoteEndPoint).Address; m_ToString = m_Address.ToString(); }
 			catch{ m_Address = IPAddress.None; m_ToString = "(error)"; }
 
-			m_Super = Core.Config.LoginConfig.IsSuperClient(m_ToString);
+			m_Super = Core.Config.Login.IsSuperClient(m_ToString);
 
 			if ( m_CreatedCallback != null )
 				m_CreatedCallback( this );
